--- a/shop.html
+++ b/shop.html
@@ -1241,14 +1241,14 @@
                     <a href="#categories" onclick="event.preventDefault();this.parentElement.classList.toggle('open')" style="display:inline-flex;align-items:center;gap:3px">Categories <svg width="10" height="6" viewBox="0 0 10 6" fill="none" style="margin-top:1px"><path d="M1 1l4 4 4-4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/></svg></a>
                     <div class="nav-dropdown-menu">
                         <a href="#" onclick="filterCat('GLP Receptor Agonists');return false">GLP Receptor Agonists</a>
-                        <a href="#" onclick="filterCat('Tissue Repair');return false">Tissue Repair</a>
+                        <a href="#" onclick="filterCat('Structural Signaling Peptides');return false">Structural Signaling Peptides</a>
                         <a href="#" onclick="filterCat('Growth Hormone Secretagogues');return false">Growth Hormone Secretagogues</a>
-                        <a href="#" onclick="filterCat('Metabolic');return false">Metabolic</a>
+                        <a href="#" onclick="filterCat('Metabolic Pathway Reagents');return false">Metabolic Pathway Reagents</a>
                         <a href="#" onclick="filterCat('Antioxidants');return false">Antioxidants</a>
                         <a href="#" onclick="filterCat('Neuropeptides');return false">Neuropeptides</a>
-                        <a href="#" onclick="filterCat('Longevity');return false">Longevity</a>
+                        <a href="#" onclick="filterCat('Cellular Research Reagents');return false">Cellular Research Reagents</a>
                         <a href="#" onclick="filterCat('Melanocortin');return false">Melanocortin</a>
-                        <a href="#" onclick="filterCat('Cosmetic');return false">Cosmetic</a>
+                        <a href="#" onclick="filterCat('Dermatological Reagents');return false">Dermatological Reagents</a>
                         <a href="#" onclick="filterCat('Advanced');return false">Advanced</a>
                     </div>
                 </span>
@@ -1311,14 +1311,14 @@
                 <div class="filter-pills">
                     <button class="filter-pill active" data-category="all">All</button>
                     <button class="filter-pill" data-category="glp">GLP</button>
-                    <button class="filter-pill" data-category="tissue">Tissue Repair</button>
+                    <button class="filter-pill" data-category="tissue">Structural</button>
                     <button class="filter-pill" data-category="gh">Growth Hormone</button>
                     <button class="filter-pill" data-category="metabolic">Metabolic</button>
                     <button class="filter-pill" data-category="antioxidants">Antioxidants</button>
                     <button class="filter-pill" data-category="neuropeptides">Neuro</button>
-                    <button class="filter-pill" data-category="longevity">Longevity</button>
+                    <button class="filter-pill" data-category="longevity">Cellular</button>
                     <button class="filter-pill" data-category="melanocortin">Melanocortin</button>
-                    <button class="filter-pill" data-category="cosmetic">Cosmetic</button>
+                    <button class="filter-pill" data-category="cosmetic">Dermatological</button>
                     <button class="filter-pill" data-category="advanced">Advanced</button>
                 </div>
             </div>
@@ -1362,7 +1362,7 @@
             </div>
             <div class="faq-item" onclick="this.classList.toggle('open')">
                 <div class="faq-q">What's included with my order?</div>
-                <div class="faq-a">Every order ships with a complimentary reconstitution kit containing bacteriostatic water and standard laboratory preparation supplies — everything needed to prepare your research compounds.</div>
+                <div class="faq-a">Every order ships with a complimentary laboratory solvent kit containing analytical-grade solvents and handling tools for the stabilization and preparation of research reagents.</div>
             </div>
             <div class="faq-item" onclick="this.classList.toggle('open')">
                 <div class="faq-q">How do I place an order?</div>
@@ -1418,7 +1418,7 @@
                 <p>✓ Ships next business day</p>
                 <p>✓ Discreet, unmarked packaging</p>
                 <p>✓ Free shipping on orders over $150</p>
-                <p>✓ Free reconstitution kit with every order</p>
+                <p>✓ Free laboratory solvent kit with every order</p>
                 <p>✓ Real humans answering your emails</p>
             </div>
             <div class="about-section">
@@ -1448,7 +1448,7 @@
             <div style="padding:8px 12px;color:#64748B;border-bottom:1px solid #E2E8F0">Shipping</div>
             <div style="padding:8px 12px;color:#0A1628;border-bottom:1px solid #E2E8F0;border-left:1px solid #E2E8F0;font-weight:600">Next business day, discreet packaging</div>
             <div style="padding:8px 12px;color:#64748B;border-bottom:1px solid #E2E8F0">Every Order Includes</div>
-            <div style="padding:8px 12px;color:#0A1628;border-bottom:1px solid #E2E8F0;border-left:1px solid #E2E8F0;font-weight:600">Free reconstitution kit + bac water</div>
+            <div style="padding:8px 12px;color:#0A1628;border-bottom:1px solid #E2E8F0;border-left:1px solid #E2E8F0;font-weight:600">Free laboratory solvent kit + analytical solvents</div>
             <div style="padding:8px 12px;color:#64748B">Support</div>
             <div style="padding:8px 12px;color:#0A1628;border-left:1px solid #E2E8F0;font-weight:600">Real humans, same-day responses</div>
         </div>
@@ -1480,7 +1480,7 @@
             </div>
             <div style="font-size:0.72rem;color:#94A3B8;margin-bottom:1rem">support@prcpeptides.com</div>
             <div class="footer-disclaimer">
-                <span class="research-only">FOR RESEARCH PURPOSES ONLY.</span> All products are intended exclusively for laboratory research and are not intended for human consumption, diagnostic purposes, or therapeutic applications. Must be 18+ to purchase. By accessing this site, you acknowledge all products are for in vitro research use only.
+                <span class="research-only">FOR RESEARCH PURPOSES ONLY.</span> All products are strictly for in vitro laboratory research. PRC Labs LLC does not provide instructions for human administration. Headquartered in Santa Cruz, CA. Must be 18+ to purchase.
             </div>
             <div style="font-size:0.65rem;color:#94A3B8;margin-top:1rem">© 2026 PRC Labs LLC. All rights reserved.</div>
         </div>
@@ -1541,7 +1541,7 @@
                 coa: true,
                 shortDesc: "Dual tissue repair complex pairing cytoprotective and actin-mediated cell migration mechanisms.",
                 fullDesc: "Tissue repair requires coordinated processes: inflammatory resolution, angiogenesis, cell migration, extracellular matrix remodeling, and cytoprotection. This combination targets multiple phases simultaneously. BPC-157 demonstrates remarkable cytoprotective properties while promoting angiogenesis through VEGF modulation. TB-500 facilitates actin polymerization and cytoskeletal reorganization, driving cell migration.",
-                applications: "Wound healing models, angiogenesis research, cytoprotection mechanisms, cell migration assays, collagen synthesis studies, anti-inflammatory pathway research, musculoskeletal repair models"
+                applications: "Wound tissue signaling models, angiogenesis research, cytoprotection mechanisms, cell migration assays, collagen synthesis studies, anti-inflammatory pathway research, musculoskeletal repair models"
             },
             {
                 name: "KPV 10mg",
@@ -1550,7 +1550,7 @@
                 coa: true,
                 shortDesc: "Anti-inflammatory tripeptide from α-MSH that retains NF-κB inhibition without melanocortin activation.",
                 fullDesc: "KPV (Lysine-Proline-Valine) represents molecular dissection of anti-inflammatory signaling. As the C-terminal tripeptide of alpha-melanocyte stimulating hormone, KPV retains the parent molecule's remarkable anti-inflammatory properties while eliminating melanocortin receptor-mediated effects like pigmentation. This separation of functions makes KPV uniquely valuable.",
-                applications: "NF-κB signaling inhibition, inflammatory cytokine modulation, inflammatory bowel disease models, mucosal immunity research, wound healing inflammation control, melanocortin peptide fragment studies"
+                applications: "NF-κB signaling inhibition, inflammatory cytokine modulation, inflammatory bowel disease models, mucosal immunity research, wound tissue signaling inflammation control, melanocortin peptide fragment studies"
             },
             {
                 name: "GHK-Cu (Copper Peptide) 100mg",
@@ -1559,7 +1559,7 @@
                 coa: true,
                 shortDesc: "Copper-binding tripeptide that chelates Cu²⁺ to modulate metalloproteinases and collagen synthesis.",
                 fullDesc: "Glycyl-L-Histidyl-L-Lysine bound to copper represents one of nature's elegant metal-mediated signaling systems. First isolated from human plasma, GHK-Cu demonstrates the biological importance of copper-peptide coordination chemistry. The copper ion, precisely positioned by the peptide, activates biological functions: stimulating collagen synthesis, modulating metalloproteinase activity, and providing antioxidant effects.",
-                applications: "Collagen synthesis mechanisms, metalloproteinase regulation, copper-dependent enzyme research, extracellular matrix remodeling, wound healing biology, antioxidant copper chemistry, tissue regeneration models"
+                applications: "Collagen synthesis mechanisms, metalloproteinase regulation, copper-dependent enzyme research, extracellular matrix remodeling, wound tissue signaling biology, antioxidant copper chemistry, tissue regeneration models"
             },
             {
                 name: "LL-37 5mg",
@@ -1568,7 +1568,7 @@
                 coa: true,
                 shortDesc: "The sole human cathelicidin with broad-spectrum antimicrobial and immunomodulatory activity.",
                 fullDesc: "LL-37 occupies a unique position in human immunology: it is the only antimicrobial peptide produced by the human cathelicidin family. Cleaved from the C-terminus of the hCAP18 precursor protein, this amphipathic alpha-helical peptide demonstrates broad-spectrum antimicrobial activity against bacteria, fungi, and enveloped viruses through membrane disruption.",
-                applications: "Antimicrobial mechanism studies, innate immunity research, membrane disruption models, biofilm penetration research, immune cell chemotaxis, wound healing immunity, vitamin D-dependent peptide regulation"
+                applications: "Antimicrobial mechanism studies, innate immunity research, membrane disruption models, biofilm penetration research, immune cell chemotaxis, wound tissue signaling immunity, vitamin D-dependent peptide regulation"
             },
             {
                 name: "Thymalin 10mg",
@@ -1809,7 +1809,7 @@
                 price: 67,
                 coa: true,
                 shortDesc: "First peptide-based senolytic disrupting FOXO4-p53 interaction in senescent cells.",
-                fullDesc: "FOXO4-DRI represents molecular precision in anti-aging research. Senescent cells accumulate with age and secrete inflammatory factors that damage surrounding tissues. Dutch researchers discovered that in senescent cells, FOXO4 protein binds and sequesters p53, preventing apoptosis. FOXO4-DRI competitively disrupts this interaction—freeing p53 to trigger apoptosis specifically in senescent cells.",
+                fullDesc: "FOXO4-DRI represents molecular precision in senescence research. Senescent cells accumulate with age and secrete inflammatory factors that damage surrounding tissues. Dutch researchers discovered that in senescent cells, FOXO4 protein binds and sequesters p53, preventing apoptosis. FOXO4-DRI competitively disrupts this interaction—freeing p53 to trigger apoptosis specifically in senescent cells.",
                 applications: "Senescent cell biology, FOXO4-p53 interaction studies, senolytic mechanism research, cellular aging models, apoptosis pathway research, SASP modulation, targeted cellular aging interventions"
             },
             {
@@ -1876,13 +1876,13 @@
                 applications: "Innate repair receptor signaling, tissue protection mechanisms, EPO receptor biology, neuroprotection studies, anti-inflammatory pathways, ischemia-reperfusion injury models, diabetic neuropathy research"
             },
             {
-                name: "Bacteriostatic Water 30ml",
+                name: "Laboratory Solvent Kit",
                 category: "supplies",
                 price: 6,
                 coa: false,
-                shortDesc: "USP-grade bacteriostatic water for reconstitution of lyophilized peptides.",
-                fullDesc: "Bacteriostatic water contains 0.9% benzyl alcohol as a preservative, allowing multiple draws from the same vial while maintaining sterility. Essential for reconstituting lyophilized peptide powders. Each 30ml vial is sealed under sterile conditions and suitable for laboratory use.",
-                applications: "Peptide reconstitution, laboratory preparation, sterile dilution"
+                shortDesc: "Analytical-grade solvents and handling tools for the stabilization and preparation of research reagents.",
+                fullDesc: "Laboratory solvent kit contains pharmaceutical-grade solvents with preservatives for maintaining sterility across multiple uses. Essential for preparing lyophilized research compounds. Each kit is sealed under sterile conditions and suitable for laboratory use.",
+                applications: "Research compound preparation, laboratory stabilization, sterile dilution"
             }
         ];
 
@@ -1899,14 +1899,14 @@
         // Category data
         var categoryData = [
             { id: 'glp', name: 'GLP Receptor Agonists', count: 5 },
-            { id: 'tissue', name: 'Tissue Repair', count: 6 },
+            { id: 'tissue', name: 'Structural Signaling Peptides', count: 6 },
             { id: 'gh', name: 'Growth Hormone', count: 5 },
-            { id: 'metabolic', name: 'Metabolic', count: 7 },
+            { id: 'metabolic', name: 'Metabolic Pathway Reagents', count: 7 },
             { id: 'antioxidants', name: 'Antioxidants', count: 7 },
             { id: 'neuropeptides', name: 'Neuropeptides', count: 6 },
-            { id: 'longevity', name: 'Longevity', count: 3 },
+            { id: 'longevity', name: 'Cellular Research Reagents', count: 3 },
             { id: 'melanocortin', name: 'Melanocortin', count: 2 },
-            { id: 'cosmetic', name: 'Cosmetic', count: 2 },
+            { id: 'cosmetic', name: 'Dermatological Reagents', count: 0 },
             { id: 'advanced', name: 'Advanced', count: 1 },
             { id: 'supplies', name: 'Supplies', count: 1 }
         ];
@@ -1947,7 +1947,7 @@
             'CJC-1295/Ipamorelin Blend': 'cjc-ipamorelin',
             'SS-31 (Elamipretide)': 'ss-31',
             'PT-141 (Bremelanotide)': 'pt-141',
-            'Bacteriostatic Water 30ml': 'bacteriostatic-water'
+            'Laboratory Solvent Kit': 'laboratory-solvent-kit'
         };
         function getProductSlug(name) {
             if (slugOverrides[name]) return slugOverrides[name];
@@ -2075,12 +2075,12 @@
                 'neuropeptides': 'Neuropeptides',
                 'glp': 'GLP Agonists',
                 'gh': 'Growth Hormone',
-                'tissue': 'Tissue Repair',
-                'metabolic': 'Metabolic',
+                'tissue': 'Structural Signaling Peptides',
+                'metabolic': 'Metabolic Pathway Reagents',
                 'antioxidants': 'Antioxidants',
-                'longevity': 'Longevity',
+                'longevity': 'Cellular Research Reagents',
                 'melanocortin': 'Melanocortin',
-                'cosmetic': 'Cosmetic',
+                'cosmetic': 'Dermatological Reagents',
                 'advanced': 'Advanced',
                 'supplies': 'Supplies'
             };
@@ -2194,7 +2194,7 @@
 
         // Dropdown nav filter
         function filterCat(name) {
-            var catMap = {'GLP Receptor Agonists':'glp','Tissue Repair':'tissue','Growth Hormone Secretagogues':'gh','Metabolic':'metabolic','Antioxidants':'antioxidants','Neuropeptides':'neuropeptides','Longevity':'longevity','Melanocortin':'melanocortin','Cosmetic':'cosmetic','Advanced':'advanced','Supplies':'supplies'};
+            var catMap = {'GLP Receptor Agonists':'glp','Structural Signaling Peptides':'tissue','Growth Hormone Secretagogues':'gh','Metabolic Pathway Reagents':'metabolic','Antioxidants':'antioxidants','Neuropeptides':'neuropeptides','Cellular Research Reagents':'longevity','Melanocortin':'melanocortin','Dermatological Reagents':'cosmetic','Advanced':'advanced','Supplies':'supplies'};
             var cat = catMap[name] || 'all';
             filterButtons.forEach(function(b) { b.classList.remove('active'); if(b.getAttribute('data-category')===cat) b.classList.add('active'); });
             currentCategory = cat;
