Compliance: remove medical language, add lab-only disclaimers

--- a/products/5-amino-1mq.html
+++ b/products/5-amino-1mq.html
@@ -114,7 +114,7 @@
 </ul>
 
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for laboratory use. For detailed reconstitution instructions and concentration ratios for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store at room temperature (15-30°C) in sealed container protected from moisture. This small molecule exhibits excellent stability. For research use, dissolve in appropriate vehicle according to experimental protocol.</p>
 <div class="faq-section">
