--- a/products/cjc-1295.html
+++ b/products/cjc-1295.html
@@ -115,7 +115,7 @@
 <h2>Research Applications</h2>
 <ul><li>GHRH analogue pharmacology</li><li>Pulsatile GH release patterns</li><li>GHRH receptor binding kinetics</li><li>Peptide stability mechanisms</li><li>Growth hormone secretion dynamics</li><li>Somatotroph physiology</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for laboratory use. For detailed reconstitution instructions and concentration ratios for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C protected from light and moisture. Reconstitute with bacteriostatic water; stable at 2-8°C for 30 days. The structural modifications provide significant proteolytic resistance.</p>
 <div class="faq-section">
@@ -142,7 +142,7 @@
 <ol style="font-size:0.8rem;color:#64748B;line-height:1.8;padding-left:1.5rem">
 <li>Jetton TL, et al. "Analysis of upstream glucokinase promoter activity in transgenic mice and identification of glucokinase in rare neuroendocrine cells in the brain and gut." J Biol Chem. 1994;269(5):3641-3654. PMID: 8106409</li>
 <li>Alba-Roth J, et al. "Arginine stimulates growth hormone secretion by suppressing endogenous somatostatin secretion." J Clin Endocrinol Metab. 1988;67(6):1186-1189. PMID: 2903866</li>
-<li>Chapman IM, et al. "Stimulation of the growth hormone (GH)-insulin-like growth factor I axis by daily oral administration of a GH secretagogue (MK-677) in healthy elderly subjects." J Clin Endocrinol Metab. 1996;81(12):4249-4257. PMID: 8954023</li>
+<li>Chapman IM, et al. "Stimulation of the growth hormone (GH)-insulin-like growth factor I axis by daily oral application of a GH secretagogue (MK-677) in healthy elderly subjects." J Clin Endocrinol Metab. 1996;81(12):4249-4257. PMID: 8954023</li>
 <li>Ionescu M, Frohman LA. "Pulsatile secretion of growth hormone (GH) persists during continuous stimulation by CJC-1295, a long-acting GH-releasing hormone analog." J Clin Endocrinol Metab. 2006;91(12):4792-4797. PMID: 16984994</li>
 <li>Sigalos JT, Pastuszak AW. "The Safety and Efficacy of Growth Hormone Secretagogues." Sex Med Rev. 2018;6(1):45-53. PMID: 28754467</li>
 </ol>
