--- a/products/l-carnitine.html
+++ b/products/l-carnitine.html
@@ -115,7 +115,7 @@
 <h2>Research Applications</h2>
 <ul><li>Mitochondrial fatty acid transport</li><li>Beta-oxidation mechanisms</li><li>Carnitine shuttle system research</li><li>Acyl-carnitine metabolism</li><li>Energy substrate utilization</li><li>Mitochondrial function studies</li><li>Carnitine deficiency models</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for laboratory use. For detailed reconstitution instructions and concentration ratios for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water or sterile water, refrigerate at 2-8°C and use within 30 days. L-Carnitine demonstrates excellent solution stability.</p>
 <div class="faq-section">
@@ -142,7 +142,7 @@
 <ol style="font-size:0.8rem;color:#64748B;line-height:1.8;padding-left:1.5rem">
 <li>Brass EP, et al. "Carnitine metabolism in the skeletal muscle of patients with sepsis." Clin Sci. 1993;84(3):295-304. PMID: 8384953</li>
 <li>McGarry JD, Brown NF. "The mitochondrial carnitine palmitoyltransferase system. From concept to molecular analysis." Eur J Biochem. 1997;244(1):1-14. PMID: 9063439</li>
-<li>Pistone G, et al. "Levocarnitine administration in elderly subjects with rapid muscle fatigue: effect on body composition, lipid profile and fatigue." Drugs Aging. 2003;20(10):761-767. PMID: 12875611</li>
+<li>Pistone G, et al. "Levocarnitine application in elderly subjects with rapid muscle fatigue: effect on body composition, lipid profile and fatigue." Drugs Aging. 2003;20(10):761-767. PMID: 12875611</li>
 <li>Brass EP, et al. "Carnitine delays exhaustion during treadmill running in rats." J Appl Physiol. 1986;61(4):1603-1607. PMID: 3781969</li>
 <li>Barnett C, et al. "Effect of L-carnitine supplementation on muscle and blood carnitine content and lactate accumulation during high-intensity sprint cycling." Int J Sport Nutr. 1994;4(3):280-288. PMID: 7987362</li>
 </ol>
