--- a/products/laennec.html
+++ b/products/laennec.html
@@ -109,7 +109,7 @@
 <h2>Research Applications</h2>
 <ul><li>Multi-growth factor signaling</li><li>Tissue regeneration models</li><li>Cytokine interaction studies</li><li>Complex biological system research</li><li>Angiogenesis with multiple factors</li><li>Cellular metabolism in growth factor-rich environments</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for laboratory use. For detailed reconstitution instructions and concentration ratios for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store refrigerated at 2-8°C in sealed ampules. Do not freeze—freezing damages the biological factor profile. Protect from direct light. Use immediately upon opening; no preservatives present. Stable 24 months unopened under proper refrigeration.</p>
 <div class="faq-section">
