--- a/products/lipo-c-max.html
+++ b/products/lipo-c-max.html
@@ -110,7 +110,7 @@
 <h2>Research Applications</h2>
 <ul><li>Lipotropic factor research</li><li>Hepatic lipid metabolism</li><li>Methyl donor biology</li><li>Choline metabolism</li><li>Mitochondrial fatty acid transport</li><li>One-carbon metabolism</li><li>Phospholipid synthesis studies</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for laboratory use. For detailed reconstitution instructions and concentration ratios for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C. Upon reconstitution, maintain at 2-8°C and use within 30 days. All components remain stable when combined in solution.</p>
 <div class="faq-section">
