--- a/products/ll-37.html
+++ b/products/ll-37.html
@@ -109,7 +109,7 @@
 <h2>Research Applications</h2>
 <ul><li>Antimicrobial mechanism studies</li><li>Innate immunity research</li><li>Membrane disruption models</li><li>Biofilm penetration research</li><li>Immune cell chemotaxis</li><li>Wound healing immunity</li><li>Vitamin D-dependent peptide regulation</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for laboratory use. For detailed reconstitution instructions and concentration ratios for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C. Upon reconstitution, maintain at 2-8°C and use within 30 days. The amphipathic structure requires gentle handling to prevent aggregation at higher concentrations.</p>
 <div class="faq-section">
