--- a/products/thioctic-acid.html
+++ b/products/thioctic-acid.html
@@ -109,7 +109,7 @@
 <h2>Research Applications</h2>
 <ul><li>Mitochondrial cofactor function</li><li>Universal antioxidant mechanisms</li><li>Antioxidant regeneration studies</li><li>Glucose metabolism research</li><li>Neuroprotection models</li><li>Metal chelation research</li><li>Redox signaling pathways</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for laboratory use. For detailed reconstitution instructions and concentration ratios for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store refrigerated at 2-8°C protected from light (light-sensitive). Supplied in solution for immediate use. Maintain sealed until use; utilize within 30 days after opening. Protect from oxidizing conditions.</p>
 <div class="faq-section">
