--- a/products/aod-9604.html
+++ b/products/aod-9604.html
@@ -115,7 +115,7 @@
 <h2>Research Applications</h2>
 <ul><li>Lipolysis mechanism research</li><li>GH fragment biology</li><li>Lipid metabolism studies</li><li>Adipocyte signaling independent of GH receptor</li><li>Selective metabolic pathway activation</li><li>Non-receptor GH effects</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for laboratory use. For detailed reconstitution instructions and concentration ratios for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, maintain at 2-8°C and use within 30 days. The modifications provide enhanced stability compared to unmodified HGH fragments.</p>
 <div class="faq-section">
