--- a/products/botulinum-100u.html
+++ b/products/botulinum-100u.html
@@ -115,7 +115,7 @@
 <h2>Research Applications</h2>
 <ul><li>SNARE protein biology</li><li>Synaptic vesicle fusion mechanisms</li><li>Neuromuscular junction research</li><li>Acetylcholine release studies</li><li>Exocytosis research</li><li>Presynaptic signaling</li><li>Metalloprotease mechanism studies</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for laboratory use. For detailed reconstitution instructions and concentration ratios for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C. Upon reconstitution, use immediately or store at 2-8°C for a maximum of 4 hours—this protein loses activity rapidly in solution. Handle with extreme care following institutional biosafety protocols.</p>
 <div class="faq-section">
