--- a/products/bpc-157-tb-500.html
+++ b/products/bpc-157-tb-500.html
@@ -115,7 +115,7 @@
 <h2>Research Applications</h2>
 <ul><li>Wound healing models</li><li>Angiogenesis research</li><li>Cytoprotection mechanisms</li><li>Cell migration assays</li><li>Collagen synthesis studies</li><li>Anti-inflammatory pathway research</li><li>Musculoskeletal repair models</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for laboratory use. For detailed reconstitution instructions and concentration ratios for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C protected from moisture. Both peptides remain stable when co-reconstituted; maintain at 2-8°C and use within 30 days. Compatible in the same solution without interaction.</p>
 <div class="faq-section">
