--- a/products/cagrilintide.html
+++ b/products/cagrilintide.html
@@ -115,7 +115,7 @@
 <h2>Research Applications</h2>
 <ul><li>Amylin receptor signaling research</li><li>Gastric emptying mechanisms</li><li>Satiety pathway studies</li><li>Pancreatic beta-cell co-secretion</li><li>Pramlintide comparison pharmacology</li><li>Calcitonin receptor family research</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for laboratory use. For detailed reconstitution instructions and concentration ratios for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C in sealed vial. Upon reconstitution, maintain refrigerated at 2-8°C and use within 30 days. The acylated structure provides exceptional stability compared to native amylin.</p>
 <div class="faq-section">
@@ -144,7 +144,7 @@
 <li>Lau DCW, et al. "Once-weekly cagrilintide for weight management in people with overweight and obesity: a multicentre, randomised, double-blind, placebo-controlled and active-controlled, dose-finding phase 2 trial." Lancet. 2021;398(10317):2160-2172. PMID: 34798951</li>
 <li>Frias JP, et al. "Cagrilintide, a long-acting amylin analogue, in combination with liraglutide 3.0 mg for weight management: SYNERGY trial." Obesity. 2021;29(Suppl 1):S18. Abstract</li>
 <li>Hjuler ST, et al. "Oral semaglutide improves postprandial glucose and lipid responses in subjects with type 2 diabetes." J Clin Endocrinol Metab. 2022;107(5):e2015-e2024. PMID: 35084475</li>
-<li>Enebo LB, et al. "Safety, tolerability, pharmacokinetics, and pharmacodynamics of concomitant administration of multiple doses of cagrilintide with semaglutide 2.4 mg for weight management: a randomised, controlled, phase 1b trial." Lancet. 2021;397(10286):1736-1748. PMID: 33933211</li>
+<li>Enebo LB, et al. "Safety, tolerability, pharmacokinetics, and pharmacodynamics of concomitant application of multiple doses of cagrilintide with semaglutide 2.4 mg for weight management: a randomised, controlled, phase 1b trial." Lancet. 2021;397(10286):1736-1748. PMID: 33933211</li>
 </ol>
 </div>
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
