--- a/products/cerebrolysin.html
+++ b/products/cerebrolysin.html
@@ -115,7 +115,7 @@
 <h2>Research Applications</h2>
 <ul><li>Multi-pathway neuroprotection</li><li>Neurodegenerative disease models</li><li>Post-stroke neuroplasticity</li><li>Synaptic preservation studies</li><li>Neurotrophic factor signaling</li><li>Cognitive impairment research</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for laboratory use. For detailed reconstitution instructions and concentration ratios for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store refrigerated at 2-8°C in original sealed ampules. Do not freeze. Protect from direct light. Use immediately upon opening; this product does not contain preservatives. Stable unopened for 24 months under proper conditions.</p>
 <div class="faq-section">
