--- a/products/cjc-ipamorelin.html
+++ b/products/cjc-ipamorelin.html
@@ -115,7 +115,7 @@
 <h2>Research Applications</h2>
 <ul><li>Dual-pathway GH secretagogue studies</li><li>GHRH/ghrelin synergy mechanisms</li><li>Amplified GH pulse research</li><li>Combined secretagogue pharmacodynamics</li><li>Maximal endogenous GH release models</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for laboratory use. For detailed reconstitution instructions and concentration ratios for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C in sealed dual-chamber vial. Reconstitute both components simultaneously; maintain at 2-8°C and use within 30 days. Both peptides exhibit excellent co-stability in solution.</p>
 <div class="faq-section">
@@ -144,7 +144,7 @@
 <li>Gobburu JV, et al. "Pharmacokinetic-pharmacodynamic modeling of ipamorelin, a growth hormone releasing peptide, in human volunteers." Pharm Res. 1999;16(9):1412-1416. PMID: 10496658</li>
 <li>Veldhuis JD, et al. "Amplitude modulation of a burstlike mode of cortisol secretion subserves the circadian glucocorticoid rhythm." Am J Physiol. 1989;257(1 Pt 1):E6-E14. PMID: 2750897</li>
 <li>Ionescu M, Frohman LA. "Pulsatile secretion of growth hormone (GH) persists during continuous stimulation by CJC-1295." J Clin Endocrinol Metab. 2006;91(12):4792-4797. PMID: 16984994</li>
-<li>Chapman IM, et al. "Stimulation of the GH-IGF-I axis by daily oral administration of a GH secretagogue (MK-677) in healthy elderly subjects." J Clin Endocrinol Metab. 1996;81(12):4249-4257. PMID: 8954023</li>
+<li>Chapman IM, et al. "Stimulation of the GH-IGF-I axis by daily oral application of a GH secretagogue (MK-677) in healthy elderly subjects." J Clin Endocrinol Metab. 1996;81(12):4249-4257. PMID: 8954023</li>
 </ol>
 </div>
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
