--- a/products/dermorphin.html
+++ b/products/dermorphin.html
@@ -115,7 +115,7 @@
 <h2>Research Applications</h2>
 <ul><li>μ-opioid receptor pharmacology</li><li>Receptor subtype selectivity studies</li><li>Opioid receptor binding kinetics</li><li>Structure-activity relationships</li><li>Receptor signaling mechanisms</li><li>D-amino acid peptide biology</li><li>Opioid tolerance mechanisms</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for laboratory use. For detailed reconstitution instructions and concentration ratios for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C protected from moisture and light. Upon reconstitution with sterile or bacteriostatic water, maintain at 2-8°C and use within 30 days. The D-amino acid provides proteolytic resistance.</p>
 <div class="faq-section">
