--- a/products/dsip-night-blend.html
+++ b/products/dsip-night-blend.html
@@ -115,7 +115,7 @@
 <h2>Research Applications</h2>
 <ul><li>Multi-peptide sleep architecture studies</li><li>Circadian entrainment mechanisms</li><li>Neurotransmitter interaction models in sleep</li><li>Restorative sleep pathway research</li><li>Sleep disorder neurochemistry</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for laboratory use. For detailed reconstitution instructions and concentration ratios for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C protected from light and moisture. Reconstituted solution remains stable at 2-8°C for up to 30 days when stored properly. Single-use aliquoting recommended for repeated experiments.</p>
 <div class="faq-section">
