--- a/products/dsip.html
+++ b/products/dsip.html
@@ -115,7 +115,7 @@
 <h2>Research Applications</h2>
 <ul><li>Sleep architecture studies</li><li>Circadian rhythm regulation</li><li>Stress-response neuroendocrine pathways</li><li>Pain perception modulation</li><li>Cortisol dynamics research</li><li>Delta wave sleep mechanisms</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for laboratory use. For detailed reconstitution instructions and concentration ratios for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C in amber vial to protect from light degradation. Upon reconstitution, store refrigerated (2-8°C) and utilize within 30 days for optimal peptide stability.</p>
 <div class="faq-section">
