--- a/products/epithalon.html
+++ b/products/epithalon.html
@@ -115,7 +115,7 @@
 <h2>Research Applications</h2>
 <ul><li>Telomerase activity research</li><li>Telomere biology</li><li>Circadian rhythm regulation</li><li>Pineal peptide research</li><li>Cellular aging mechanisms</li><li>Melatonin regulation studies</li><li>Longevity pathway research</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for laboratory use. For detailed reconstitution instructions and concentration ratios for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, maintain at 2-8°C and use within 30 days. This short peptide demonstrates good stability in solution.</p>
 <div class="faq-section">
