--- a/products/foxo4-dri.html
+++ b/products/foxo4-dri.html
@@ -115,7 +115,7 @@
 <h2>Research Applications</h2>
 <ul><li>Senescent cell biology</li><li>FOXO4-p53 interaction studies</li><li>Senolytic mechanism research</li><li>Cellular aging models</li><li>Apoptosis pathway research</li><li>SASP modulation</li><li>Targeted cellular aging interventions</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for laboratory use. For detailed reconstitution instructions and concentration ratios for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C protected from moisture. Upon reconstitution, maintain at 2-8°C and use within 30 days. D-amino acid peptides demonstrate exceptional proteolytic stability.</p>
 <div class="faq-section">
