--- a/products/ghk-cu.html
+++ b/products/ghk-cu.html
@@ -115,7 +115,7 @@
 <h2>Research Applications</h2>
 <ul><li>Collagen synthesis mechanisms</li><li>Metalloproteinase regulation</li><li>Copper-dependent enzyme research</li><li>Extracellular matrix remodeling</li><li>Wound healing biology</li><li>Antioxidant copper chemistry</li><li>Tissue regeneration models</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for laboratory use. For detailed reconstitution instructions and concentration ratios for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C protected from light (copper complexes are photosensitive). Reconstitute with sterile water; the copper complex remains stable at 2-8°C for 30 days. Avoid oxidizing agents.</p>
 <div class="faq-section">
