--- a/products/glutathione-1500mg.html
+++ b/products/glutathione-1500mg.html
@@ -115,7 +115,7 @@
 <h2>Research Applications</h2>
 <ul><li>Redox biology</li><li>Oxidative stress models</li><li>Glutathione peroxidase studies</li><li>Cellular detoxification pathways</li><li>Thiol biochemistry</li><li>Xenobiotic metabolism</li><li>GSH/GSSG ratio studies</li><li>Antioxidant defense mechanisms</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for laboratory use. For detailed reconstitution instructions and concentration ratios for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C protected from light and oxidizing conditions. Upon reconstitution with sterile water, use promptly or store at 2-8°C for up to 30 days. Glutathione oxidizes over time; fresh solutions provide optimal reducing capacity.</p>
 <div class="faq-section">
