--- a/products/ipamorelin.html
+++ b/products/ipamorelin.html
@@ -115,7 +115,7 @@
 <h2>Research Applications</h2>
 <ul><li>Ghrelin receptor (GHS-R1a) pharmacology</li><li>Selective GH secretion mechanisms</li><li>Growth hormone pulse dynamics</li><li>Somatotroph receptor selectivity</li><li>GHRP comparative studies</li><li>Non-GHRH secretagogue pathways</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for laboratory use. For detailed reconstitution instructions and concentration ratios for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, refrigerate at 2-8°C and utilize within 30 days. Ipamorelin demonstrates excellent stability in solution compared to earlier secretagogues.</p>
 <div class="faq-section">
