--- a/products/lipo-c-ultra.html
+++ b/products/lipo-c-ultra.html
@@ -109,7 +109,7 @@
 <h2>Research Applications</h2>
 <ul><li>Comprehensive metabolic system research</li><li>Multi-pathway integration studies</li><li>Maximal metabolic capacity models</li><li>System-level bioenergetics</li><li>Performance optimization research</li><li>Complex metabolic phenotyping</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for laboratory use. For detailed reconstitution instructions and concentration ratios for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C in sealed container with desiccant. Upon reconstitution, maintain at 2-8°C and use within 30 days. Despite complexity, all components maintain stability in combined solution.</p>
 <div class="faq-section">
