--- a/products/mots-c.html
+++ b/products/mots-c.html
@@ -109,7 +109,7 @@
 <h2>Research Applications</h2>
 <ul><li>Mitochondrial-nuclear signaling</li><li>Metabolic homeostasis mechanisms</li><li>AMPK pathway research</li><li>Insulin sensitivity studies</li><li>Mitochondrial genome function</li><li>Retrograde signaling research</li><li>Exercise mimetic studies</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for laboratory use. For detailed reconstitution instructions and concentration ratios for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C protected from moisture. Reconstitute with bacteriostatic water; stable at 2-8°C for 30 days. Handle as a standard peptide despite its mitochondrial origin.</p>
 <div class="faq-section">
