--- a/products/pe-22-28.html
+++ b/products/pe-22-28.html
@@ -109,7 +109,7 @@
 <h2>Research Applications</h2>
 <ul><li>TREK-1 channel modulation</li><li>Neuroplasticity mechanisms</li><li>Neuroprotection studies</li><li>Potassium channel biology</li><li>Synaptic plasticity research</li><li>Neurogenesis studies</li><li>Neurotrophic signaling pathways</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for laboratory use. For detailed reconstitution instructions and concentration ratios for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, maintain at 2-8°C and use within 30 days. Standard peptide handling precautions apply.</p>
 <div class="faq-section">
