--- a/products/pt-141.html
+++ b/products/pt-141.html
@@ -110,12 +110,12 @@
 <li>Demonstrates dose-dependent effects in behavioral models with ED50 of approximately 1 mg/kg for central arousal markers (Molinoff et al., 2003)</li>
 <li>Research suggests activation of oxytocin neurons in paraventricular nucleus with 3.2-fold increase in c-Fos expression (Argiolas et al., 2000)</li>
 <li>Shows enhanced dopamine release in medial preoptic area by 180% in microdialysis studies (Melis et al., 2004)</li>
-<li>Studies indicate effects begin within 30-60 minutes of administration with duration of 6-12 hours in pharmacokinetic analyses (Diamond et al., 2005)</li>
+<li>Studies indicate effects begin within 30-60 minutes of application with duration of 6-12 hours in pharmacokinetic analyses (Diamond et al., 2005)</li>
 </ul>
 <h2>Research Applications</h2>
 <ul><li>Melanocortin receptor subtype pharmacology</li><li>MC3R/MC4R signaling research</li><li>Central melanocortin pathway studies</li><li>Receptor selectivity research</li><li>Hypothalamic signaling mechanisms</li><li>Melanocortin system biology</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for laboratory use. For detailed reconstitution instructions and concentration ratios for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, maintain at 2-8°C and use within 30 days. The cyclic structure provides enhanced proteolytic stability.</p>
 <div class="faq-section">
