--- a/products/selank-10mg.html
+++ b/products/selank-10mg.html
@@ -109,7 +109,7 @@
 <h2>Research Applications</h2>
 <ul><li>Anxiety model studies</li><li>Cognitive function research</li><li>Immune-neuro axis modulation</li><li>GABAergic pathway studies</li><li>Stress response mechanisms</li><li>Cytokine regulation research</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for laboratory use. For detailed reconstitution instructions and concentration ratios for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C in sealed vial. Upon reconstitution with bacteriostatic water, maintain at 2-8°C and utilize within 30 days. Avoid freeze-thaw cycles to preserve peptide integrity.</p>
 <div class="faq-section">
