--- a/products/selank-5mg.html
+++ b/products/selank-5mg.html
@@ -108,14 +108,14 @@
 <ul>
 <li>Modulates IL-6 expression in stress models, reducing levels by 45% compared to stress-only controls (Volkova et al., 2016)</li>
 <li>Studies indicate enhanced serotonin turnover in hippocampus with 38% increase in 5-HIAA/5-HT ratio in anxiety models (Uchakina et al., 2008)</li>
-<li>Demonstrates BDNF upregulation of 52% in prefrontal cortex after 7-day administration in rodent studies (Semenova et al., 2010)</li>
+<li>Demonstrates BDNF upregulation of 52% in prefrontal cortex after 7-day application in rodent studies (Semenova et al., 2010)</li>
 <li>Research suggests modulation of GABA-A receptor expression with 30% increase in receptor density in amygdala (Kozlovskaya et al., 2003)</li>
 <li>Shows dose-dependent effects on anxiety behavior in elevated plus maze with ED50 of approximately 300 μg/kg (Inozemtsev et al., 2008)</li>
 </ul>
 <h2>Research Applications</h2>
 <ul><li>Anxiety model studies</li><li>Cognitive function research</li><li>Immune-neuro axis modulation</li><li>GABAergic pathway studies</li><li>Stress response mechanisms</li><li>Cytokine regulation research</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for laboratory use. For detailed reconstitution instructions and concentration ratios for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C in sealed vial. Upon reconstitution with bacteriostatic water, maintain at 2-8°C and utilize within 30 days. Avoid freeze-thaw cycles to preserve peptide integrity.</p>
 <div class="faq-section">
