--- a/products/semaglutide.html
+++ b/products/semaglutide.html
@@ -108,14 +108,14 @@
 <ul>
 <li>Demonstrated 94% identity to human GLP-1 with enhanced proteolytic stability through Aib substitution at position 8 (Lau et al., 2015)</li>
 <li>Exhibits dose-dependent reductions in food intake and body weight in diet-induced obese rodent models through central GLP-1 receptor activation (Secher et al., 2014)</li>
-<li>Weekly administration maintains therapeutic GLP-1 receptor occupancy exceeding 80% throughout dosing interval in pharmacokinetic studies (Kapitza et al., 2015)</li>
+<li>Weekly application maintains therapeutic GLP-1 receptor occupancy exceeding 80% throughout dosing interval in pharmacokinetic studies (Kapitza et al., 2015)</li>
 <li>Shows synergistic effects with insulin sensitizers in improving glycemic control in diabetic mouse models (Nauck et al., 2016)</li>
 <li>Reduces hepatic steatosis markers in NASH models through mechanisms independent of weight loss (Armstrong et al., 2016)</li>
 </ul>
 <h2>Research Applications</h2>
 <ul><li>GLP-1 receptor binding and signaling studies</li><li>Glucose homeostasis mechanisms</li><li>Pancreatic beta-cell function research</li><li>Appetite regulation pathways</li><li>Incretin pharmacology</li><li>Metabolic disease models</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for laboratory use. For detailed reconstitution instructions and concentration ratios for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C protected from light. Upon reconstitution with bacteriostatic water, store at 2-8°C and use within 30 days. The acylated structure provides enhanced stability compared to native GLP-1.</p>
 <div class="faq-section">
