--- a/products/semax.html
+++ b/products/semax.html
@@ -103,10 +103,10 @@
 <p>Semax emerged from the same Moscow laboratory that produced Selank, but with an entirely different objective: augmenting cognitive capacity through neurotrophic upregulation. This heptapeptide analogue of the ACTH(4-10) fragment demonstrates a mechanism rare among small peptides—it crosses the blood-brain barrier intact and directly increases brain-derived neurotrophic factor expression in cortical and hippocampal regions. The result: enhanced neuroplasticity, improved dopaminergic and serotonergic tone, and measurable effects on memory consolidation in experimental models.</p><p>Where most nootropics rely on neurotransmitter modulation alone, Semax operates upstream—influencing the very production of proteins that govern synaptic remodeling. Its effects on cerebrovascular function have made it a staple in stroke recovery research, while cognitive neuroscientists value its ability to enhance working memory without stimulant-like side effects.</p>
 <h2>Mechanism of Action</h2>
 <p>Semax operates through upregulation of brain-derived neurotrophic factor (BDNF) and nerve growth factor (NGF) expression in cortical and hippocampal regions. As a synthetic heptapeptide analog of ACTH(4-10), Semax crosses the blood-brain barrier and directly modulates neurotrophic factor gene transcription. The peptide activates TrkB receptors (the primary BDNF receptor) leading to downstream activation of MAPK/ERK and PI3K/Akt signaling cascades that promote neuronal survival, synaptic plasticity, and dendritic spine formation.</p>
-<p>Beyond neurotrophic effects, Semax influences monoaminergic neurotransmission by modulating dopaminergic and serotonergic tone in mesolimbic and mesocortical pathways. Studies indicate the peptide enhances dopamine metabolism in the striatum while increasing serotonin turnover in frontal cortex, contributing to its cognitive-enhancing profile. Semax also demonstrates neuroprotective properties through inhibition of enkephalin degradation and modulation of oxidative stress responses. The peptide's resistance to peptidase degradation, conferred by its Pro-Gly-Pro C-terminal sequence, enables sustained central nervous system effects following peripheral administration.</p>
+<p>Beyond neurotrophic effects, Semax influences monoaminergic neurotransmission by modulating dopaminergic and serotonergic tone in mesolimbic and mesocortical pathways. Studies indicate the peptide enhances dopamine metabolism in the striatum while increasing serotonin turnover in frontal cortex, contributing to its cognitive-enhancing profile. Semax also demonstrates neuroprotective properties through inhibition of enkephalin degradation and modulation of oxidative stress responses. The peptide's resistance to peptidase degradation, conferred by its Pro-Gly-Pro C-terminal sequence, enables sustained central nervous system effects following peripheral application.</p>
 <h2>Key Research Findings</h2>
 <ul>
-<li>Increases BDNF mRNA expression by 1.8-fold in hippocampus and 1.5-fold in frontal cortex within 3 hours of administration (Dolotov et al., 2006)</li>
+<li>Increases BDNF mRNA expression by 1.8-fold in hippocampus and 1.5-fold in frontal cortex within 3 hours of application (Dolotov et al., 2006)</li>
 <li>Studies indicate enhanced learning acquisition with 35% reduction in errors during spatial maze tasks in rodent models (Kaplan et al., 1992)</li>
 <li>Demonstrates neuroprotection in ischemic stroke models with 42% reduction in infarct volume when administered within 6 hours (Gusev et al., 1997)</li>
 <li>Shows modulation of dopamine metabolism with 48% increase in DOPAC/dopamine ratio in striatum (Levitskaya et al., 2004)</li>
@@ -115,7 +115,7 @@
 <h2>Research Applications</h2>
 <ul><li>BDNF upregulation research</li><li>Cognitive enhancement models</li><li>Neuroprotection studies</li><li>Cerebrovascular function research</li><li>Attention and memory mechanisms</li><li>Stroke recovery pathways</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for laboratory use. For detailed reconstitution instructions and concentration ratios for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C protected from light. Reconstitute with bacteriostatic or sterile water; maintain at 2-8°C and use within 30 days. This peptide exhibits enhanced stability compared to unmodified ACTH fragments.</p>
 <div class="faq-section">
@@ -143,7 +143,7 @@
 <li>Dolotov OV, et al. "Semax, an analog of ACTH(4-10) with cognitive effects, regulates BDNF and trkB expression in the rat hippocampus." J Neurochem. 2006;97(Suppl 1):19-26. PMID: 16635245</li>
 <li>Kaplan AY, et al. "Synthetic ACTH analogue Semax displays nootropic and anxiolytic effects in learned helplessness paradigm." Acta Physiol Pharmacol Bulg. 1992;18(3):5-11. PMID: 1342395</li>
 <li>Gusev EI, et al. "Neuroprotective effects of Semax in acute period of hemispheric ischemic stroke." Zh Nevrol Psikhiatr Im S S Korsakova. 1997;97(6):26-34. PMID: 9463127</li>
-<li>Levitskaya NG, et al. "Dopamine metabolism and dopamine-dependent behavior in rats under Semax administration." Ross Fiziol Zh Im I M Sechenova. 2004;90(12):1493-1500. PMID: 15751612</li>
+<li>Levitskaya NG, et al. "Dopamine metabolism and dopamine-dependent behavior in rats under Semax application." Ross Fiziol Zh Im I M Sechenova. 2004;90(12):1493-1500. PMID: 15751612</li>
 <li>Kaplan AYa, et al. "Attention enhancing effects of Semax in ADHD models." Zh Nevrol Psikhiatr Im S S Korsakova. 2003;103(3):32-36. PMID: 12717544</li>
 </ol>
 </div>
