--- a/products/ss-31.html
+++ b/products/ss-31.html
@@ -109,7 +109,7 @@
 <h2>Research Applications</h2>
 <ul><li>Mitochondrial membrane research</li><li>Cardiolipin interaction studies</li><li>Cristae structure biology</li><li>Mitochondrial ROS modulation</li><li>Ischemia-reperfusion models</li><li>Mitochondrial bioenergetics</li><li>Targeted mitochondrial protection</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for laboratory use. For detailed reconstitution instructions and concentration ratios for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C protected from light. Upon reconstitution with bacteriostatic water, maintain at 2-8°C and use within 30 days. The aromatic-cationic structure provides excellent peptide stability.</p>
 <div class="faq-section">
