--- a/products/thymalin.html
+++ b/products/thymalin.html
@@ -109,7 +109,7 @@
 <h2>Research Applications</h2>
 <ul><li>T-cell differentiation studies</li><li>Thymic function research</li><li>Bioregulator peptide mechanisms</li><li>Immune system modulation</li><li>Immunosenescence models</li><li>Adaptive immunity research</li><li>Peptide-DNA interaction studies</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for laboratory use. For detailed reconstitution instructions and concentration ratios for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C protected from moisture. Reconstitute with sterile or bacteriostatic water; maintain at 2-8°C and use within 30 days. As a biological extract, handle with standard peptide precautions.</p>
 <div class="faq-section">
