--- a/products/tirzepatide-20mg.html
+++ b/products/tirzepatide-20mg.html
@@ -115,7 +115,7 @@
 <h2>Research Applications</h2>
 <ul><li>Dual incretin pathway research</li><li>GIP/GLP-1 receptor synergy</li><li>Incretin receptor pharmacology</li><li>Metabolic signaling cascade studies</li><li>Pancreatic islet function</li><li>Comparative incretin biology</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for laboratory use. For detailed reconstitution instructions and concentration ratios for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C in sealed container. Reconstitute with bacteriostatic water; maintain at 2-8°C for up to 30 days. The fatty acid modification provides proteolytic resistance and extended stability.</p>
 <div class="faq-section">
