Remove Dermatological category and Botulinum products

--- a/index.html
+++ b/index.html
@@ -1248,7 +1248,7 @@
                         <a href="#" onclick="filterCat('Neuropeptides');return false">Neuropeptides</a>
                         <a href="#" onclick="filterCat('Cellular Research Reagents');return false">Cellular Research Reagents</a>
                         <a href="#" onclick="filterCat('Melanocortin');return false">Melanocortin</a>
-                        <a href="#" onclick="filterCat('Dermatological Reagents');return false">Dermatological Reagents</a>
+                        <!-- <a href="#" onclick="filterCat('Dermatological Reagents');return false">Dermatological Reagents</a> -->
                         <a href="#" onclick="filterCat('Advanced');return false">Advanced</a>
                     </div>
                 </span>
@@ -1318,7 +1318,7 @@
                     <button class="filter-pill" data-category="neuropeptides">Neuro</button>
                     <button class="filter-pill" data-category="longevity">Cellular</button>
                     <button class="filter-pill" data-category="melanocortin">Melanocortin</button>
-                    <button class="filter-pill" data-category="cosmetic">Dermatological</button>
+                    <!-- <button class="filter-pill" data-category="cosmetic">Dermatological</button> -->
                     <button class="filter-pill" data-category="advanced">Advanced</button>
                 </div>
             </div>
@@ -1848,6 +1848,7 @@
                 fullDesc: "Dermorphin stands as one of pharmacology's most intriguing discoveries. Isolated from South American frog skin secretions, this heptapeptide contains an unusual D-alanine in position 2. This structural quirk contributes to dermorphin's exceptional properties: nanomolar μ-opioid receptor affinity, selectivity ratios exceeding 1000:1, and resistance to peptidase degradation.",
                 applications: "μ-opioid receptor pharmacology, receptor subtype selectivity studies, opioid receptor binding kinetics, structure-activity relationships, receptor signaling mechanisms, D-amino acid peptide biology, opioid tolerance mechanisms"
             },
+            /*
             {
                 name: "Botulinum Toxin 100u",
                 category: "cosmetic",
@@ -1866,6 +1867,7 @@
                 fullDesc: "Botulinum neurotoxin type A represents the gold standard for studying exocytosis. By specifically cleaving SNAP-25—a protein essential for SNARE complex formation—BoNT/A prevents synaptic vesicles from fusing with the presynaptic membrane, completely blocking neurotransmitter release. This exquisite molecular specificity makes it invaluable for research.",
                 applications: "SNARE protein biology, synaptic vesicle fusion mechanisms, neuromuscular junction research, acetylcholine release studies, exocytosis research, presynaptic signaling, metalloprotease mechanism studies"
             },
+            */
             {
                 name: "ARA-290 (Cibinetide) 10mg",
                 category: "advanced",
