Shorten promo bar text for mobile

--- a/index.html
+++ b/index.html
@@ -1227,7 +1227,7 @@
 
     <!-- Header -->
     <!-- Promo Bar -->
-    <div class="promo-bar" id="promoBar"><strong>FREE SHIPPING</strong> over $150 &nbsp;·&nbsp; Free laboratory solvent kit included</div>
+    <div class="promo-bar" id="promoBar"><strong>FREE SHIPPING</strong> over $150 &nbsp;·&nbsp; Free laboratory solvent kit</div>
 
     <header>
         <div class="header-content">
